[package]
name = "just-orm"
version = "0.1.0-alpha.3"
license = "MIT"
description = "A simple database ORM that use JSON file for Rust"
homepage="https://github.com/apilylabs/just-orm"
repository = "https://github.com/apilylabs/just-orm"
authors = ["code-xhyun <shh6155@gmail.com>"]
keywords = ["json", "database", "orm", "json-orm"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.2.0"

